--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,11 +9,20 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="APOSTAS.157.webp" alt="logo do site start">
+        <img class="cabecalho-imagem" src="brazino-777-bonus-cadastro-login-confiavel.avif" alt="logo do site start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">FAÇA SUAS APOSTAS</li>
             <li class="cabecalho-lista-item">LUCRE ATÈ 500 REAS POR DIA</li>
         </ul>
     </header>
+    <section class="APOSTAS">
+        <div class="APOSTAS-CONTEUDO">
+        <h2 class="apostas-titulo">SITE DE APOSTAS ONLINE</h2>
+        <p class="APOSTAS-TEXTO 1"> O Brazino 777 jogo da galera é um site de apostas esportivas. 
+            E, como tal, permite que você faça apostas online em jogos como futebol, basquete, Fórmula 1, tênis, beisebol, 
+            entre outros. Uma vantagem é que você pode ganhar bônus, algo que nem todas as casas de apostas oferecem. </p>
+        </div>
+       <img class="SITE-DE-APOSTAS" src="777.webp" alt="SOBRE A IMAGEM">     
+    </section>
 </body>
 </html>
