--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="STYLE.CSS">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
@@ -23,6 +26,11 @@
             entre outros. Uma vantagem é que você pode ganhar bônus, algo que nem todas as casas de apostas oferecem. </p>
         </div>
        <img class="SITE-DE-APOSTAS" src="777.webp" alt="SOBRE A IMAGEM">     
+    </section>
+    <section class="site-777">
+        <h2 class="site-titulo">o que e nosso site</h2>
+        <img clas="site-777-imagem" src="images (cópia 1).jpeg" alt="teste-sua-sorte">
+        <h3>site-777-imagem</h3>
     </section>
 </body>
 </html>
