--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -13,7 +13,8 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="brazino-777-bonus-cadastro-login-confiavel.avif" alt="logo do site start">
-        <ul class="cabecalho-lista">
+        <ul class="cabecalho-lista"><h2 class="apostas-titulo">SITE DE APOSTAS ONLINE</h2>
+            <h2 class="apostas-titulo">SITE DE APOSTAS ONLINE</h2>
             <li class="cabecalho-lista-item">FAÇA SUAS APOSTAS</li>
             <li class="cabecalho-lista-item">LUCRE ATÈ 500 REAS POR DIA</li>
         </ul>
@@ -30,7 +31,13 @@
     <section class="site-777">
         <h2 class="site-titulo">o que e nosso site</h2>
         <img clas="site-777-imagem" src="images (cópia 1).jpeg" alt="teste-sua-sorte">
+        <h2 class="apostas-titulo">SITE DE APOSTAS ONLINE</h2>
         <h3>site-777-imagem</h3>
     </section>
+    <h2 class="apostas-titulo">SITE DE APOSTAS ONLINE</h2>
+    <footer class="rodape">
+        <img class="rodape-imagem"src="brazino-777-bonus-cadastro-login-confiavel.avif" alt="logo da alura start">
+    </footer>
+
 </body>
 </html>
